--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <li><a href="#sobre">Sobre</a></li>
                 <li><a href="#exp">Experiências</a></li>
                 <li><a href="#skills">Skills</a></li>
-                <li><a href="#certs">Certificados</a></li>
+                <li><a href="#certificados">Certificados</a></li>
                 <li><a href="#contatos">Contatos</a></li>
             </ul>
         </nav>
@@ -190,7 +190,7 @@
         <h2>Contatos<span>:</span></h2>
         <h5>Formulário de Contato</h5>
     <form
-      action="https://formsubmit.co/ricoghm@gmail.com"method="POST"class="form">
+      action="https://formsubmit.co/gaetticomercial@gmail.com"method="POST"class="form">
       <label for="name">Nome</label>
       <input type="text" name="name" id="name" required />
       <label for="email">E-mail</label>
@@ -198,7 +198,7 @@
       <label for="message">Mensagem</label>
       <textarea name="message" id="message" required></textarea>
       <input type="hidden" name="_captcha" value="false" />
-      <input type="hidden"name="_next" value="http://127.0.0.1:5500/index.html"/>.
+      <input type="hidden"name="_next" value="https://gaettizz.github.io/Curriculo-Web/"/>.
       <button type="submit">Enviar</button>
     </form>
 
