--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         </section>
     
         <!---Section do "certificados"-->
-        <section class="certificados">
+        <section class="certificados" id="certificados">
 
             <div class="titulo">
                 <h2>Certificados</h2><hr>
