--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
       <label for="message">Mensagem</label>
       <textarea name="message" id="message" required></textarea>
       <input type="hidden" name="_captcha" value="false" />
-      <input type="hidden"name="_next" value="https://gaettizz.github.io/Curriculo-Web/"/>.
+      <input type="hidden"name="_next" value="https://gaettizz.github.io/"/>.
       <button type="submit">Enviar</button>
     </form>
 
