--- a/index.html
+++ b/index.html
@@ -43,14 +43,13 @@
             <img src="perfil.jpg">
          <div class="sobre-texto">
             <h2>Sobre mim <span>:</span></h2>
-            <h5>Dedicado <span>& Lorem</span></h5>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                Perspiciatis cum corrupti earum! Molestias itaque et inventore accusantium
-                 cum architecto distinctio 
-                eum aperiam quibusdam ipsam,
-                 fuga eligendi, omnis quidem. 
-                Doloremque consequatur nisi deserunt quidem officiis similique
-                 expedita magnam quod.</p>
+            <h5>Analista<span> de Segurança</span></h5>
+            <p>Desde sempre fui muito curioso e interessado em Tecnologia, com 15 anos ingressei em um curso técnico 
+                em Desenvolvimento de Sistemas o que me abriu os olhos para o real mundo da Tecnologia, 
+                mas havia uma matéria em especifico que me brilhou os olhos e foi a matéria de Segurança da Informação.<br> 
+                Hoje curso defesa cibernetica e faço estágio na área de Segurança da Informação, onde me encanto cada vez mais a medida que
+                me aprofundo e por isso sigo estudando e realizando cursos focando em minha 
+                aprimoração como profissional.</p>
                  <a href="#contatos"> <button type="button">Vamos Coversar!</button></a>
 
          </div>   
