--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <i class="fa-solid fa-bars"></i>
                 <h5> Técnologo em Defesa Cibernética</h5>
                 <div class="pra">
-                    <p>Cursando o terceiro semestre em Defesa Cibernética na <a href="https://www.googleadservices.com/pagead/aclk?sa=L&ai=DChcSEwim3ra_oeP7AhUGNZEKHXXpDkEYABAAGgJjZQ&ae=2&ohost=www.google.com&cid=CAESbOD2Hf9beIPmGjLt_aSzs-6yHrIbT_XXrb66DcBPQSt159242-yC7gZdXcfe60Di8exNpeLLT654R4zfplmYCzbCSNXnE0o3tza24yK0HY3HUQhTl8TymIZOg-0iCcdwCLGqISo60GS50E-aVg&sig=AOD64_38zdCjIEHa41QOh8NeUl_RlYxQRg&q&adurl&ved=2ahUKEwjqla6_oeP7AhU7J7kGHVLxBkIQ0Qx6BAgHEAE" target="_blank">Faculdade Impacta de Tecnologia</a></p>
+                    <p>Cursando o terceiro semestre em Defesa Cibernética na <a href="https://www.impacta.edu.br/graduacoes/defesa-cibernetica" target="_blank">Faculdade Impacta de Tecnologia</a></p>
                     <p style="text-align: center;"></p>
                     <a href="https://www.impacta.edu.br/graduacoes/defesa-cibernetica" target="_blank"> <button type="button">Saiba mais</button></a>
                 </div>
